--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "chadicus/slim-oauth2-http",
+    "name": "samcheung/slim-oauth2-http",
     "description": "Bridge components for slim and oauth2 http messages.",
     "keywords": ["slim", "oauth2", "http", "message"],
     "authors": [
@@ -11,7 +11,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "~5.6 || ~7.0",
+        "php": "~5.5",
         "bshaffer/oauth2-server-php": "~1.8",
         "slim/slim": "~3.0"
     },
